style.css
@font-face
{
	font-family: "Raleway";
 	 src:url("fonts/Raleway-Italic-VariableFont_wght");
 	 src:url("fonts/Raleway-VariableFont_wght.ttf");

}
/*corps de page*/
body
{
	font-family: "Raleway", sans-serif;
	width: 95%;
	margin: auto;
}
/*header logo*/
header
{
	display: flex;
	justify-content: space-between;
	align-items: flex-end;
}
#logo img
{
	width: 106px;
	height: 60px;
}
/*menu*/
.menu ul
{
	display: flex;
	list-style-type: none;
}
.menu li
{
	display: flex;
	flex-direction: row;
	text-decoration: none;
	margin-right: 50px;
	font-size: 1.1em;
}
.hover
{
	color: #000000;
	text-decoration: none;
	padding-top: 30px;
	padding-left: 20px;
	padding-right: 20px;
	border-top: 1px solid transparent;
	transition: 0.5s ease;
}
.inscrire
{
	font-weight: bold;
	color: #0065fc;
	padding-top: 30px;
}
.hover:hover
{
	color: #0065fc;
	border-top: 1px solid #0065fc;
}
/*titre et recherche*/
.recherche h2
{
	font-size: 1.4em;
}
.titre
{
	font-size: 1.1em;
	margin-top: -10px;
}
.searchbar
{
	display: flex;
	justify-content: flex-start;
	text-decoration: none;
}
.marker
{
	width: 40px;
	height: 26px;
	font-size: 1.1em;
	text-align: center;
	padding: 6px;
	padding-left: 8px;
	padding-top: 10px;
	border: 1px transparent solid;
	border-radius: 12px 0 0 12px;
	color: #000000;
	margin-top: auto;
	background-color: #f2f2f2;
}
.textarea
{
	width: 233px;
	height: 40px;
	font-size: 1.2em;
	font-weight: bold;
	border-left: none;
	border-right: none;
	border-bottom: 1px #f2f2f2 solid;
	border-top: 1px #f2f2f2 solid;
	padding-left: 16px;
}
.button
{
	width: 130px;
    height: 43px;
    color: white;
    font-size: 1.2em;
    border: 2px transparent solid;
    border-radius: 0 12px 12px 0;
	background-color: #0065fc;
}
.button i
{
	display: none;
}
/*barre des filtres*/
.filtres
{
	display: flex;
}
.filtres p
{
	font-weight: bold;
	font-size: 1.1em;
	margin-right: 25px;
	margin-top: 33px;	
}
.filtres ul
{
	display: flex;
	flex-wrap: wrap;
	list-style-type: none;
	padding: 0;
}
.responsive
{
	display: flex;
}
.filtres li
{
	display: flex;
	justify-content: center;
	align-items: center;
	font-size: 1.2em;
	font-weight: bold;
	border: 1px solid #f2f2f2;
	border-radius: 30px 30px 30px 30px;
	padding-right: 15px;
	margin-right: 30px;
	margin-left: 22px;
}
.filtres li i
{
	display: flex;
	justify-content: center;
	align-items: center;
	color: #0065fc;
	border: 1px solid transparent;
	border-radius: 50%;
	width: 50px;
	height: 50px;
	background-color: #deebff;
	margin-right: 10px;		
}
/*le point info*/
.info
{
	display: flex;
	align-items: flex-end;
	font-size: 1.1em;
}
.info i
{
	font-size: 0.8em;
	border: 1px solid #f2f2f2;
	border-radius: 50%;
	padding: 4px 9px 4px 9px;
	margin-right: 10px;
	color: #0065fc;
}
/*section hebergement*/
.section1
{
	display: flex;
	justify-content: space-between;
	flex-direction: row;
	margin-top: 45px;
}
.hebergements 
{
	width: auto;
	background-color:#f2f2f2;
	border-radius: 15px;
	margin-right: 17px;
	padding: 17px;
}
.hebergements h2
{
	font-size: 1.5em;
	margin-left: 15px;
	margin-bottom: 5px;
	margin-top: 15px;
}
.soleil
{
	text-decoration: none;
}
.auberge
{
	display: grid;
	grid-template-columns: 1fr 1fr 1fr;
	grid-template-rows: 1fr 1fr;
	grid-column-gap: 35px;
	grid-row-gap: 10px;
	padding-left: 15px;
	padding-right: 15px;
}
.auberge img
{
	width: 265px;
	height: 115px;
	border: 3px solid white;
	border-radius: 12px 12px 0 0;	
}
.auberge figure
{
	border: 3px solid transparent;
	border-radius: 12px;
	background-color: white;
	margin: 17px;
	margin-right: auto;	
	margin-left: auto;		
}
.auberge strong
{
	margin-left: 10px;
	color: black;
	font-size: 1.1em;
	text-decoration: none;	
}
.auberge p
{
	margin-left: 10px;
	color: black;
}
.auberge a
{
	text-decoration: none;
}
.fas
{
	color: #0065fc
}
.afficher a
{
	text-decoration: none;
	color: black;
	margin-left: 34px;
}
.afficher p
{
	text-decoration: none;
	font-weight: bold;
	margin-top: 25px;
	font-size: 1.1em;
}
/*article les plus populaires*/
.populaires
{
	background-color: #f2f2f2;
	border-radius: 15px;
	width: 480px;	
}
.plus
{
	display: flex;
	justify-content: space-between;
	align-items: baseline;
	font-size: 1.1em;
	margin-left: 38px;
	margin-top: 10px;
	margin-right: 34px;
}
#finance
{
	color: black;
}
.populaires img
{
	width: 160px;
	height: 160px;
	border-radius: 12px;
	margin-top: -10px;
	margin-bottom: -10px;
}
.hotel
{
	display: grid;
	grid-template-columns: 1fr 1fr;
	border: 4px solid transparent;
	background-color: white;
	border-radius: 12px;
	margin-top: 5px;
	padding-top: 10px;
	vertical-align: middle;
	margin-bottom: 35px;
}
.soleil
{
	text-align: left;
	width: 180px;
	height: 150px;
	text-decoration: none;
}
.soleil figcaption 
{
	margin-left: -30px;
}
.soleil strong
{
	color: black;
	font-size: 1.1em;
	text-decoration: none;
}
.soleil i
{
	text-decoration: none;
	margin-top: 25px;
}
a
{
	text-decoration: none;
}
.soleil p
{
	color: black;
	text-decoration: none;
}
#star, #star1, #star2, #star3, #star4, #star5, #star6
{
	color: #f2f2f2;	
}
/*activités à marseille*/
.section2 h2
{
	font-size: 1.5em;
	margin-top: 45px;
	margin-left: 5px;
	margin-bottom: 40px;
}
.activites
{
	height: auto;
	width:auto;
	display: grid;
	grid-template-columns: repeat(4, 1fr);
	grid-template-rows: 34% 34%;
	margin-left: auto;
	column-gap: 31px;
	margin-top: -20px;
}
.vieux
{
	grid-column: 1 ;
	grid-row: 1 / span 2;
	height: 400px;
	width: 343px;
	border: 1px solid #f2f2f2;
	border-radius: 12px;
	margin-right: 10px;	
}
.fort
{
	grid-column: 2;
	grid-row: 1;
	border: 1px solid #f2f2f2;
	width: 343px;
	height: 205px;
	margin-right: 10px;
	border-radius: 12px;
}
.frioul
{
	grid-column: 2;
	grid-row: 2;
	border: 1px solid #f2f2f2;
	height: 153px;
	width: 343px;
	margin-right: 10px;
	border-radius: 12px;
	margin-top: 92px;
}
.parc
{
	grid-column: 3;
	grid-row: 1 / span 2;
	height: 400px;
	width: 343px;
	border: 1px solid #f2f2f2;
	margin-right: 10px;
	border-radius: 12px;
}
.dame
{
	grid-column: 4;
	grid-row: 1;
	border: 1px solid #f2f2f2;
	height: 180px;
	width: 343px;
	border-radius: 12px;
}
.longchamp
{
	grid-column: 4;
	grid-row: 2;
	border: 1px solid #f2f2f2;
	height: 180px;
	width: 343px;
	border-radius: 12px;
	margin-top: 66px;
}
.vieux img
{
	height: 350px;
	width: 343px;
	border-radius: 12px 12px 0 0;
	margin-bottom: 10px;
	margin-left: -40px;
	margin-top: -17px;
}
.parc img
{
	height: 350px;
	width: 343px;
	border-radius: 12px 12px 0 0;
	margin-bottom: 10px;
	margin-left: -40px;
	margin-top: -17px;
}
.dame img
{
	height: 132px;
	width: 343px;
	border-radius: 12px 12px 0 0;
	margin-bottom: 10px;
	margin-left: -40px;
	margin-top: -17px;
}
.longchamp img
{
	height: 132px;
	width: 343px;
	border-radius: 12px 12px 0 0;
	margin-bottom: 10px;
	margin-left: -40px;
	margin-top: -17px;
}
.fort img
{
	height: 165px;
	width: 343px;
	border-radius: 12px 12px 0 0;
	margin-bottom: 10px;
	margin-left: -40px;
	margin-top: -17px;
}
.frioul img
{
	height: 105px;
	width: 343px;
	border-radius: 12px 12px 0 0;
	margin-left: -40px;
	margin-top: -17px;
	margin-bottom: 10px;
}
.activites a
{
	text-decoration: none;
}
.activites strong
{
	color: black;
	padding-left: 15px;
}
/*footer*/
footer
{
	display: grid;
	grid-template-columns: 1fr 1fr 1fr;
	background-color: #f2f2f2;
	margin-right: -30px;
	margin-left: -30px;
	margin-bottom: 10px;
	margin-top: 45px;
}
footer ul
{
	margin-top: 35px;
}
ul
{
	list-style-type: none;
}
footer ul li
{
	padding-bottom: 10px;
}

/*responsive media queries*/
@media all and (max-width: 480px)
{
body
{
	width: 100%;
}
header
{
	width: 100%;
}
#logo
{
	margin-left: 30px;
}
.menu ul 
{
	width: 100%;
	padding: 0;
	margin: 0;
	margin-top: 20px;
}
.menu li 
{
	margin: 0;
    justify-content: flex-end;
    width: 50%;
    text-align: center;
	margin-top: 10px;
}
.hover
{
	width: 100%;
	border-bottom: 1px solid #f2f2f2;
	padding-bottom: 15px;
	margin-bottom: 10px;
}
.hover:hover
{
	border-top-color: transparent;
	border-bottom: 1px solid #0065fc;
}	
.inscrire
{
	position: absolute;
    top: 0px;
    right: 37px;
}
.recherche
{
	padding-left: 30px;
}
.recherche h2 
{
	width: 95%;
	font-size: 1.7em;
}
.titre
{
	font-size: 1.25em;
}
.searchbar
{
	width: 92%;
}
form
{
	display: flex;
}
.marker
{
	padding-left: 12px;
    padding-right: 12px;
}
.textarea
{
	width: 100%;
    font-size: 1.5em;
}
.button
{
	width: 55px;
	border-radius: 12px;
}
span 
{
	display: none;
}
.button i
{
	display: block;
	color: white;	
}
.filtres
{
	position: relative;
	margin-top: 20px;
}
.filtres p
{
	position: absolute;
	margin: 0;
}
.filtres li 
{   	
    margin-top: 22px;
    margin-left: 0px;
}
.info
{
	font-size: 1.25em;
}
.info i 
{
    margin-bottom: 23px;
}
/*hebergements et populaires*/
.section1
{
	display: flex;
	flex-direction: column-reverse;
	width: 100%;
	margin: 0;
}
.populaires
{
	grid-row: 1;
	border-radius: unset;
}
.populaires figure 
{
	width: auto;
}
.hebergements
{
	background-color: unset;
}
.hebergements h2 
{
	margin-top: 20px;
    margin-left: 0;
}
.auberge
{
	display: flex;
	flex-direction: column;
}
.auberge figure
{
	box-shadow: 0px 2px 5px 2px grey;
}
.afficher
{
	margin-left: -20px;
}
.section2 h2 
{
	margin-left: 15px;
}
.activites
{
	display: flex;
	flex-direction: column;
}	
.activites a  
{
	height: 235px;
	margin: 17px;
	margin-bottom: 0px;
	box-shadow: 0px 2px 5px 2px grey;
}
.activites img 
{
    height: 186px;
}
footer 
{
	width: 100%;
	display: flex;
	flex-direction: column;
	margin-top: 70px;
	padding-top: 30px;
}
}
/*media queries tablettes*/
@media all and (max-width: 1024px)
{
#logo
{
	position: absolute;
	top: 10px;
}
.menu
{
	width: 100%;
	display: flex;
	justify-content: center;
	margin-top: 35px;
}
.filtres li 
{
	margin-bottom: 10px;
}
.section1
{
	display: grid;
}
.hebergements
{
	margin: 0;
}
.hebergements h2 
{
	margin-left: 0;
}
.hotel2
{
	margin-top: 37px;
}
.auberge
{
	width: 100%;
	grid-template-columns: 1fr 1fr;	
	padding: 0;
}
.auberge figcaption figure 
{
	width: auto;
}
.auberge img 
{
	width: 98%;
}
.afficher
{
	margin-left: -20px;
}
.populaires 
{
	width: auto;
    display: flex;
    flex-direction: column;
	margin-top: 50px;
	padding: 17px;
	padding-right: 24px;
}
.plus
{
	margin: 0;
}
.populaires a 
{
	margin-bottom: 40px;
}
.populaires figure 
{
	margin: 0;
    padding: 0;
}
.populaires figcaption 
{
    padding-left: 20px;
}
.populaires img 
{
	width: 100%;
	padding: 10px 0 10px 0 ;
}
.activites
{
	grid-template-columns: 50% 50%;
	grid-template-rows: 400px 400px;
	grid-row-gap: 40px;
	grid-column-gap: 20px;
}
.activites a 
{
	width: auto;
}
.activites figure
{
	margin: 0;
}
.activites img 
{
	width: 100%;
	margin: auto;
}
.parc
{
	grid-column: 1;
	grid-row: 2;
}
.fort
{
	margin-right: 20px;
}
.frioul
{
	grid-column: 2;
	grid-row: 1;
	margin-top: 247px;
	margin-right: 20px;
}
.dame
{
	grid-column: 2;
	grid-row: 2;
	margin-right: 20px;
}
.longchamp
{
	grid-column: 2;
	grid-row: 2;
	margin-top: 220px;
	margin-right: 20px;
}
footer 
{
	width: 100%;
    margin-left: 0px;
}
footer ul 
{
	width: auto;

}
footer li 
{
	padding-left: 17px;
}
}

